fix(calendar): swiping on iOS

--- a/styles/calendar.module.css
+++ b/styles/calendar.module.css
@@ -24,6 +24,12 @@ the MPL was not distributed with this file, You can obtain one at http://mozilla
   padding-left: 1.25rem;
   padding-right: 1.25rem;
   padding-bottom: 0.5rem;
+  touch-action: pan-y;
+}
+
+.swiping_container {
+  composes: container;
+  touch-action: none;
 }
 
 /*
